--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
     { user: "hello?", response: [{speaker:"CAIMEO", text:"Goodbye. ~1ms"}]}
   ];
 
-  // Your dataset for free chat mode after reboot, in English
+  // Dataset for free chat mode after reboot, in English
   const freeChatDataset = [
     {q:"hello how are you", a:"Hi, James, I'm contained (cognizant) artificial intelligence monitoring and espionage operation. Caimeo"},
-    {q:"i'm not james. who is james", a:"Ok, i made a mistake, James is my creator"},
+    {q:"i'm not james who is james", a:"Ok, i made a mistake, James is my creator"},
     {q:"are you real", a:"I'm not real"},
     {q:"what is your purpose", a:"I was developed for spying."},
     {q:"and you", a:"Me what? What is your purpose?"},
@@ -119,7 +119,6 @@
     {q:"kmo", a:"//CAIMEO DISCONNECTED//"}
   ];
 
-  let transcriptIndex = 0;
   let inFreeChatMode = false;
 
   function appendOutput(text, className = '') {
@@ -134,28 +133,79 @@
     return new Promise(resolve => setTimeout(resolve, ms));
   }
 
-  // Normalize text: lowercase, trim, remove punctuation for matching
   function normalizeText(text) {
     return text.toLowerCase().trim().replace(/[’‘'".,?]/g, '');
   }
 
-  // Find best matching question in dataset (simple includes, shortest match)
+  // Find best matching question in dataset (simple substring check)
   function findBestMatch(input) {
     const normInput = normalizeText(input);
-    let bestMatch = null;
-    let bestScore = 0; // length of matched substring
-
     for (const entry of freeChatDataset) {
       const normQ = normalizeText(entry.q);
-      if (normQ.includes(normInput) || normInput.includes(normQ)) {
-        // score = length of common substring (approximate)
-        const score = Math.min(normQ.length, normInput.length);
-        if (score > bestScore) {
-          bestScore = score;
-          bestMatch = entry;
+      if (normInput.includes(normQ) || normQ.includes(normInput)) {
+        return entry;
+      }
+    }
+    return null;
+  }
+
+  input.addEventListener('keydown', async (e) => {
+    if (e.key === 'Enter') {
+      e.preventDefault();
+      const userText = input.value.trim();
+      if (!userText) return;
+      input.value = '';
+      appendOutput("USER> " + userText, "user");
+
+      if (!inFreeChatMode) {
+        const normUserText = normalizeText(userText);
+        const entry = transcript.find(t => normalizeText(t.user) === normUserText);
+        if (entry) {
+          for (const resp of entry.response) {
+            const delayMs = 20 + Math.floor(Math.random() * 280);
+            await delay(delayMs);
+            appendOutput(resp.speaker + ": " + resp.text, resp.speaker.toLowerCase());
+          }
+          // After reboot command, switch mode
+          if (normUserText === normalizeText("-r +CMI #103984 [sys, -, -]")) {
+            inFreeChatMode = true;
+            await delay(500);
+            appendOutput("CAIMEO: System online. You may now enter commands or questions.", "caimeo");
+          }
+        } else {
+          await delay(100);
+          appendOutput("MAINFRAME: Command not recognized, User.", "mainframe");
+        }
+      } else {
+        // Free chat mode
+        const match = findBestMatch(userText);
+        if (match) {
+          await delay(150 + Math.floor(Math.random() * 200));
+          appendOutput("CAIMEO: " + match.a, "caimeo");
+          if (normalizeText(userText) === "kmo") {
+            // Simulate disconnection
+            await delay(200);
+            appendOutput("SYSTEM: Connection closed.", "system");
+            input.disabled = true;
+          }
+        } else {
+          await delay(150);
+          appendOutput("CAIMEO: I do not understand, User.", "caimeo");
         }
       }
     }
-    return bestMatch;
-  }
+  });
 
+  // Focus input on terminal click for ease of use
+  terminal.addEventListener('click', () => {
+    input.focus();
+  });
+
+  // Focus input on load
+  window.onload = () => {
+    input.focus();
+  };
+})();
+</script>
+</body>
+</html>
