--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
   const freeChatDataset = [
     {q:"hello how are you", a:"Hi, James, I'm contained (cognizant) artificial intelligence monitoring and espionage operation. Caimeo"},
     {q:"i'm not james who is james", a:"Ok, i made a mistake, James is my creator"},
+    {q:"i'm not james", a:"Ok, i made a mistake"},
     {q:"are you real", a:"I'm not real"},
     {q:"what is your purpose", a:"I was developed for spying."},
     {q:"and you", a:"Me what? What is your purpose?"},
