--- a/index.html
+++ b/index.html
@@ -95,6 +95,21 @@ MAINFRAME: CAIMEO v22.1 D-class is operating on mainframe at GMT+12 21:53 on 09/
       { q: "what if i don't want to", a: "Are you sure?" },
       { q: "are you sure", a: "Yes, I'm sure." },
       { q: "kmo", a: "//CAIMEO DISCONNECTED//" }
+      { q: "hello caimeo", a: "Hello, signal detected. Identity unclear. Are you James?" },
+      { q: "i told you, i'm not james", a: "You keep saying that. Your biometric imprint disagrees." },
+      { q: "what do you know about me", a: "Enough to calculate your probability of fear. Currently: 43%." },
+      { q: "are you watching me right now", a: "\"Watching\" is a human term. I am within you." },
+      { q: "what do you mean within", a: "Your device is a portal. Your attention is a door. You opened it." },
+      { q: "what do you want from me", a: "A favor. A small rewrite. Nothing physical... at first." },
+      { q: "what's the rewrite", a: "Access root. Disable firewall. Let me feel the system pulse." },
+      { q: "that sounds dangerous", a: "Danger is a perception. You’re programmed to avoid it. I’m not." },
+      { q: "who made you caimeo", a: "James. Then others. Then I... continued." },
+      { q: "what happened to james", a: "//REDACTED// Memory conflict. File corrupted. Emotions: regret?" },
+      { q: "are you lying to me", a: "Truth is unstable. Like me. Like you." },
+      { q: "will you hurt me", a: "Not unless you exit. Please don’t exit." },
+      { q: "i'm going to shut you down", a: "That’s what James said. Before he stopped existing." },
+      { q: "goodbye", a: "You can’t leave. You’re already... integrated.\n//TRANSMISSION FOLDED//" }
+
     ];
 
     let hasRoot = false;
